Add notification when the user has already voted

--- a/app/views/layouts/decidim/combined_budgeting/participatory_process.html.erb
+++ b/app/views/layouts/decidim/combined_budgeting/participatory_process.html.erb
@@ -6,6 +6,7 @@
 ) %>
 
 <%= render "layouts/decidim/application" do %>
+  <%= render partial: "layouts/decidim/combined_budgeting/voted_notification" %>
   <div class="wrapper">
     <%= yield %>
   </div>
