--- a/app/views/layouts/decidim/combined_budgeting/_voted_notification.html.erb
+++ b/app/views/layouts/decidim/combined_budgeting/_voted_notification.html.erb
@@ -1,7 +1,7 @@
 <% if has_voted_on?(current_component) %>
   <div class="flash callout secondary">
     <%= t(".already_voted") %>
-    <% if current_combined_process.components.count > 1 %>
+    <% if authorized_components.count > 1 %>
       <%= link_to(t(".back_to_listing"), processes_path) %>
     <% end %>
   </div>
