Add the light process header for the participatory processes
As per request, show the participatory space title and light
version of the process header (without steps).

--- a/app/views/layouts/decidim/combined_budgeting/participatory_process.html.erb
+++ b/app/views/layouts/decidim/combined_budgeting/participatory_process.html.erb
@@ -7,6 +7,7 @@
 
 <%= render "layouts/decidim/application" do %>
   <%= render partial: "layouts/decidim/combined_budgeting/voted_notification" %>
+  <%= render partial: "layouts/decidim/combined_budgeting/process_header" %>
   <div class="wrapper">
     <%= yield %>
   </div>
