Fix the sample link on the form

--- a/app/views/decidim/combined_budgeting/admin/processes/_form.html.erb
+++ b/app/views/decidim/combined_budgeting/admin/processes/_form.html.erb
@@ -13,7 +13,7 @@
     <div class="row column">
       <%= form.text_field :slug %>
       <p class="help-text">
-        <%== t(".slug_help", url: decidim_form_slug_url(:budgets, form.object.slug || t(".slug_help_sample"))) %>
+        <%== t(".slug_help", url: decidim_form_slug_url(:budgeting, form.object.slug || t(".slug_help_sample"))) %>
       </p>
     </div>
 
