Update voted notification and change its link
- Move the voted notification under the process header and make
  it display without the flash/callout message styling
- Increase the font size of the voted notification
- Change the link to point back to the component listing in case
  there are more components to vote on
- Change the link to point back to the process listing in case
  there are more processes to vote on
- Change the link to point back to the root path in case there are
  no more components or processes to vote on

--- a/app/views/layouts/decidim/combined_budgeting/_voted_notification.html.erb
+++ b/app/views/layouts/decidim/combined_budgeting/_voted_notification.html.erb
@@ -1,8 +1,23 @@
 <% if has_voted_on?(current_component) %>
-  <div class="flash callout secondary">
-    <%= t(".already_voted") %>
-    <% if authorized_components.count > 1 %>
-      <%= link_to(t(".back_to_listing"), processes_path) %>
-    <% end %>
+  <div class="row column text-large">
+    <p><%= t(".already_voted") %></p>
+
+    <div class="section text-medium">
+      <%
+      back_to_path = begin
+        if authorized_components.count.positive?
+          process_path(current_combined_process)
+        elsif combined_processes.count.positive?
+          processes_path
+        else
+          root_path
+        end
+      end
+      %>
+      <%= link_to back_to_path, class: "muted-link" do %>
+        <%= icon "chevron-left", class: "icon--small" %>
+        <%= t(".back_to_listing") %>
+      <% end %>
+    </div>
   </div>
 <% end %>
