Fix a bug regarding the "voted notification" links
Link back to listing if the amount is > 1, not only positive
because that could lead to redirection to the same page the user
was already at.

--- a/app/views/layouts/decidim/combined_budgeting/_voted_notification.html.erb
+++ b/app/views/layouts/decidim/combined_budgeting/_voted_notification.html.erb
@@ -5,9 +5,9 @@
     <div class="section text-medium">
       <%
       back_to_path = begin
-        if authorized_components.count.positive?
+        if authorized_components.count > 1
           process_path(current_combined_process)
-        elsif combined_processes.count.positive?
+        elsif combined_processes.count > 1
           processes_path
         else
           root_path
