Add SVG image roles

--- a/app/views/decidim/combined_budgeting/processes/_authorizations_list.html.erb
+++ b/app/views/decidim/combined_budgeting/processes/_authorizations_list.html.erb
@@ -18,7 +18,7 @@
               </div>
               <div class="card--list__data">
                 <span class="card--list__data__icon">
-                  <%= icon "chevron-right" %>
+                  <%= icon "chevron-right", aria_hidden: true, role: "img" %>
                 </span>
               </div>
             </div>
@@ -54,7 +54,7 @@
               </div>
               <div class="card--list__data">
                 <span class="card--list__data__icon">
-                  <%= icon "chevron-right" %>
+                  <%= icon "chevron-right", aria_hidden: true, role: "img" %>
                 </span>
               </div>
             </div>
