--- a/app/views/layouts/decidim/combined_budgeting/_voted_notification.html.erb
+++ b/app/views/layouts/decidim/combined_budgeting/_voted_notification.html.erb
@@ -15,7 +15,7 @@
       end
       %>
       <%= link_to back_to_path, class: "muted-link" do %>
-        <%= icon "chevron-left", class: "icon--small" %>
+        <%= icon "chevron-left", class: "icon--small", role: "img" %>
         <%= t(".back_to_listing") %>
       <% end %>
     </div>
